--- a/src/app/Medication/components/medication-table/medication-table.component.html
+++ b/src/app/Medication/components/medication-table/medication-table.component.html
@@ -6,46 +6,48 @@
     </button>
   </div>
   <!-- table -->
-  <div *ngIf="medications.length === 0">No Medications</div>
-  <table mat-table [dataSource]="medications" class="mat-elevation-z8" *ngIf="medications.length > 0">
-    <!-- Name Column -->
-    <ng-container matColumnDef="medication-name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let medication">{{ medication.name }}</td>
-    </ng-container>
-
-    <!-- Schedules Column -->
-    <ng-container matColumnDef="medication-schedules">
-      <th mat-header-cell *matHeaderCellDef>Schedules</th>
-      <td mat-cell *matCellDef="let medication">
-        <ul class="code-editor-options-menu" *ngFor="let schedule of medication.schedules">
-          <li>{{schedule.start_date | date:'shortTime'}}</li>
-        </ul>
-      </td>
-    </ng-container>
-
-    <!-- Schedules Column -->
-    <ng-container matColumnDef="medication-status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let medication">
-        {{medication.disabled === true ? 'Paused' : 'Active'}}
-      </td>
-    </ng-container>
-
-    <!-- Actions Column -->
-    <ng-container matColumnDef="medication-actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let medication">
-        <button mat-icon-button (click)="editMedication(medication.id)">
-          <mat-icon>edit_calendar</mat-icon>
-        </button>
-        <button mat-icon-button (click)="deleteMedication(medication.id, medication.name)">
-          <mat-icon color="warn">delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+  @if (medications.length === 0) {
+    <div>No Medications</div>
+  }
+  @if (medications.length > 0) {
+    <table mat-table [dataSource]="medications" class="mat-elevation-z8">
+      <!-- Name Column -->
+      <ng-container matColumnDef="medication-name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let medication">{{ medication.name }}</td>
+      </ng-container>
+      <!-- Schedules Column -->
+      <ng-container matColumnDef="medication-schedules">
+        <th mat-header-cell *matHeaderCellDef>Schedules</th>
+        <td mat-cell *matCellDef="let medication">
+          @for (schedule of medication.schedules; track schedule) {
+            <ul class="code-editor-options-menu">
+              <li>{{schedule.start_date | date:'shortTime'}}</li>
+            </ul>
+          }
+        </td>
+      </ng-container>
+      <!-- Schedules Column -->
+      <ng-container matColumnDef="medication-status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let medication">
+          {{medication.disabled === true ? 'Paused' : 'Active'}}
+        </td>
+      </ng-container>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="medication-actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let medication">
+          <button mat-icon-button (click)="editMedication(medication.id)">
+            <mat-icon>edit_calendar</mat-icon>
+          </button>
+          <button mat-icon-button (click)="deleteMedication(medication.id, medication.name)">
+            <mat-icon color="warn">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  }
 </div>
