--- a/src/app/Schedule/components/schedule-table/schedule-table.component.html
+++ b/src/app/Schedule/components/schedule-table/schedule-table.component.html
@@ -5,28 +5,30 @@
   </button>
 </div>
 
-<div *ngIf="schedules.length === 0">No Schedules</div>
+@if (schedules.length === 0) {
+  <div>No Schedules</div>
+}
 
-<table mat-table [dataSource]="schedules" class="mat-elevation-z8" *ngIf="schedules.length > 0">
-  <!-- Name Column -->
-  <ng-container matColumnDef="schedule-start_date">
-    <th mat-header-cell *matHeaderCellDef>Time</th>
-    <td mat-cell *matCellDef="let schedule">{{ schedule.start_date | date:'shortTime'}}</td>
-  </ng-container>
-
-  <!-- Actions Column -->
-  <ng-container matColumnDef="schedule-actions">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
-    <td mat-cell *matCellDef="let schedule">
-      <button mat-icon-button (click)="updateSchedule(schedule.id)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button (click)="deleteSchedule(schedule.id)">
-        <mat-icon color="warn">delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+@if (schedules.length > 0) {
+  <table mat-table [dataSource]="schedules" class="mat-elevation-z8">
+    <!-- Name Column -->
+    <ng-container matColumnDef="schedule-start_date">
+      <th mat-header-cell *matHeaderCellDef>Time</th>
+      <td mat-cell *matCellDef="let schedule">{{ schedule.start_date | date:'shortTime'}}</td>
+    </ng-container>
+    <!-- Actions Column -->
+    <ng-container matColumnDef="schedule-actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let schedule">
+        <button mat-icon-button (click)="updateSchedule(schedule.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="deleteSchedule(schedule.id)">
+          <mat-icon color="warn">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+}
