--- a/src/app/Task/components/task-table/task-table.component.html
+++ b/src/app/Task/components/task-table/task-table.component.html
@@ -1,30 +1,31 @@
 <div class="main-container">
   <h1>Task List</h1>
-  <div *ngIf="tasks.length === 0">No Tasks</div>
-  <table mat-table [dataSource]="tasks" class="mat-elevation-z8" *ngIf="tasks.length > 0">
-    <!-- name Column -->
-    <ng-container matColumnDef="task-key">
-      <th mat-header-cell *matHeaderCellDef>Key</th>
-      <td mat-cell *matCellDef="let task">{{ task.key }}</td>
-    </ng-container>
-
-    <!-- surname_1 Column -->
-    <ng-container matColumnDef="task-next">
-      <th mat-header-cell *matHeaderCellDef>Next</th>
-      <td mat-cell *matCellDef="let task">{{ task.next }}</td>
-    </ng-container>
-
-    <!-- Actions Column -->
-    <ng-container matColumnDef="task-actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let task">
-        <button mat-icon-button (click)="deleteTask(task.key)">
-          <mat-icon color="warn">delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+  @if (tasks.length === 0) {
+    <div>No Tasks</div>
+  }
+  @if (tasks.length > 0) {
+    <table mat-table [dataSource]="tasks" class="mat-elevation-z8">
+      <!-- name Column -->
+      <ng-container matColumnDef="task-key">
+        <th mat-header-cell *matHeaderCellDef>Key</th>
+        <td mat-cell *matCellDef="let task">{{ task.key }}</td>
+      </ng-container>
+      <!-- surname_1 Column -->
+      <ng-container matColumnDef="task-next">
+        <th mat-header-cell *matHeaderCellDef>Next</th>
+        <td mat-cell *matCellDef="let task">{{ task.next }}</td>
+      </ng-container>
+      <!-- Actions Column -->
+      <ng-container matColumnDef="task-actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let task">
+          <button mat-icon-button (click)="deleteTask(task.key)">
+            <mat-icon color="warn">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  }
 </div>
