--- a/src/app/User/components/contact-list/contact-list.component.html
+++ b/src/app/User/components/contact-list/contact-list.component.html
@@ -1,7 +1,11 @@
 <div style="margin-left: auto; margin-right: auto">
   <p id="contactListFeedback"></p>
 </div>
-<app-contact-table [contacts]="contacts$ | async" (removeUserContactRequest)="removeUserContact($event)"
-  *ngIf="(isMobile$ | async) === false"></app-contact-table>
-<app-contact-grid [contacts]="contacts$ | async" (removeUserContactRequest)="removeUserContact($event)"
-  *ngIf="(isMobile$ | async) === true"></app-contact-grid>
+@if ((isMobile$ | async) === false) {
+  <app-contact-table [contacts]="contacts$ | async" (removeUserContactRequest)="removeUserContact($event)"
+  ></app-contact-table>
+}
+@if ((isMobile$ | async) === true) {
+  <app-contact-grid [contacts]="contacts$ | async" (removeUserContactRequest)="removeUserContact($event)"
+  ></app-contact-grid>
+}
