--- a/src/app/User/components/user-grid/user-grid.component.html
+++ b/src/app/User/components/user-grid/user-grid.component.html
@@ -1,8 +1,14 @@
 <div class="main-container">
   <h1>User List</h1>
-  <div *ngIf="users.length > 0">
-    <app-user-card [user]="user" (deleteUserRequest)="deleteUser($event)" (editUserRequest)="editUser($event)"
-      *ngFor="let user of users"></app-user-card>
-  </div>
-  <div *ngIf="users.length === 0">No contacts</div>
+  @if (users.length > 0) {
+    <div>
+      @for (user of users; track user) {
+        <app-user-card [user]="user" (deleteUserRequest)="deleteUser($event)" (editUserRequest)="editUser($event)"
+        ></app-user-card>
+      }
+    </div>
+  }
+  @if (users.length === 0) {
+    <div>No contacts</div>
+  }
 </div>
