--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,90 +1,136 @@
 <!-- loading spinners-->
-<app-spinner *ngIf="showLoadingAuth$ | async"></app-spinner>
-<app-spinner *ngIf="showLoadingUser$ | async"></app-spinner>
-<app-spinner *ngIf="showLoadingMedication$ | async"></app-spinner>
-<app-spinner *ngIf="showLoadingSchedule$ | async"></app-spinner>
-<app-spinner *ngIf="showLoadingTask$ | async"></app-spinner>
+@if (showLoadingAuth$ | async) {
+  <app-spinner></app-spinner>
+}
+@if (showLoadingUser$ | async) {
+  <app-spinner></app-spinner>
+}
+@if (showLoadingMedication$ | async) {
+  <app-spinner></app-spinner>
+}
+@if (showLoadingSchedule$ | async) {
+  <app-spinner></app-spinner>
+}
+@if (showLoadingTask$ | async) {
+  <app-spinner></app-spinner>
+}
 
 <!-- UPPER TOOLBAR: NOT LOGGED -->
-<mat-toolbar *ngIf="user_role !== 'admin' && user_role !== 'user'" color="primary">
-  <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span class="toolbar-spacer"></span>
-  <button mat-flat-button color="primary" (click)="login()">Login</button>
-  <button mat-flat-button color="primary" (click)="register()">Register</button>
-</mat-toolbar>
+@if (user_role !== 'admin' && user_role !== 'user') {
+  <mat-toolbar color="primary">
+    <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="toolbar-spacer"></span>
+    <button mat-flat-button color="primary" (click)="login()">Login</button>
+    <button mat-flat-button color="primary" (click)="register()">Register</button>
+  </mat-toolbar>
+}
 <!-- UPPER TOOLBAR: LOGGED -->
-<mat-toolbar *ngIf="user_role === 'admin' || user_role === 'user'" color="primary">
-  <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span class="toolbar-spacer"></span>
-  <button mat-flat-button color="primary" (click)="profile()">Profile</button>
-  <button mat-flat-button color="primary" (click)="logout()">Logout</button>
-</mat-toolbar>
+@if (user_role === 'admin' || user_role === 'user') {
+  <mat-toolbar color="primary">
+    <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="toolbar-spacer"></span>
+    <button mat-flat-button color="primary" (click)="profile()">Profile</button>
+    <button mat-flat-button color="primary" (click)="logout()">Logout</button>
+  </mat-toolbar>
+}
 
 <!-- SIDENAV -->
 <mat-sidenav-container autosize="true">
   <mat-sidenav [ngClass]="!isCollapsed ? 'expanded' : 'collapsed'" [mode]="isMobile ? 'over' : 'side'"
     [opened]="isMobile ? 'false' : 'true'">
     <mat-nav-list>
-      <a mat-list-item routerLinkActive (click)="landing()" (keydown.enter)="landing()" tabindex="0"
-        *ngIf="user_role !== 'admin' && user_role !== 'user'">
-        <span class="entry">
-          <mat-icon>home</mat-icon>
-          <span *ngIf="!isCollapsed">Home</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="userToday()" (keydown.enter)="userToday()" tabindex="0"
-        *ngIf="user_role === 'user'">
-        <span class="entry">
-          <mat-icon>home</mat-icon>
-          <span *ngIf="!isCollapsed">Today</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="adminDashboard()" (keydown.enter)="adminDashboard()" tabindex="0"
-        *ngIf="user_role === 'admin'">
-        <span class="entry">
-          <mat-icon>home</mat-icon>
-          <span *ngIf="!isCollapsed">Dashboard</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="userMedications()" (keydown.enter)="userMedications()" tabindex="0"
-        *ngIf="user_role === 'user'">
-        <span class="entry">
-          <mat-icon>medication</mat-icon>
-          <span *ngIf="!isCollapsed">Medications</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="userHistory()" (keydown.enter)="userHistory()" tabindex="0"
-        *ngIf="user_role === 'user'">
-        <span class="entry">
-          <mat-icon>history</mat-icon>
-          <span *ngIf="!isCollapsed">History</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="userContacts()" (keydown.enter)="userContacts()" tabindex="0"
-        *ngIf="user_role === 'user'">
-        <span class="entry">
-          <mat-icon>perm_contact_cal</mat-icon>
-          <span *ngIf="!isCollapsed">Contacts</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="adminUsers()" (keydown.enter)="adminUsers()" tabindex="0"
-        *ngIf="user_role === 'admin'">
-        <span class="entry">
-          <mat-icon>supervised_user_circle</mat-icon>
-          <span *ngIf="!isCollapsed">User List</span>
-        </span>
-      </a>
-      <a mat-list-item routerLinkActive (click)="adminTasks()" (keydown.enter)="adminTasks()" tabindex="0"
-        *ngIf="user_role === 'admin'">
-        <span class="entry">
-          <mat-icon>task_alt</mat-icon>
-          <span *ngIf="!isCollapsed">Task List</span>
-        </span>
-      </a>
+      @if (user_role !== 'admin' && user_role !== 'user') {
+        <a mat-list-item routerLinkActive (click)="landing()" (keydown.enter)="landing()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>home</mat-icon>
+            @if (!isCollapsed) {
+              <span>Home</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'user') {
+        <a mat-list-item routerLinkActive (click)="userToday()" (keydown.enter)="userToday()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>home</mat-icon>
+            @if (!isCollapsed) {
+              <span>Today</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'admin') {
+        <a mat-list-item routerLinkActive (click)="adminDashboard()" (keydown.enter)="adminDashboard()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>home</mat-icon>
+            @if (!isCollapsed) {
+              <span>Dashboard</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'user') {
+        <a mat-list-item routerLinkActive (click)="userMedications()" (keydown.enter)="userMedications()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>medication</mat-icon>
+            @if (!isCollapsed) {
+              <span>Medications</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'user') {
+        <a mat-list-item routerLinkActive (click)="userHistory()" (keydown.enter)="userHistory()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>history</mat-icon>
+            @if (!isCollapsed) {
+              <span>History</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'user') {
+        <a mat-list-item routerLinkActive (click)="userContacts()" (keydown.enter)="userContacts()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>perm_contact_cal</mat-icon>
+            @if (!isCollapsed) {
+              <span>Contacts</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'admin') {
+        <a mat-list-item routerLinkActive (click)="adminUsers()" (keydown.enter)="adminUsers()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>supervised_user_circle</mat-icon>
+            @if (!isCollapsed) {
+              <span>User List</span>
+            }
+          </span>
+        </a>
+      }
+      @if (user_role === 'admin') {
+        <a mat-list-item routerLinkActive (click)="adminTasks()" (keydown.enter)="adminTasks()" tabindex="0"
+          >
+          <span class="entry">
+            <mat-icon>task_alt</mat-icon>
+            @if (!isCollapsed) {
+              <span>Task List</span>
+            }
+          </span>
+        </a>
+      }
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="router-content">
