--- a/src/app/User/components/user-card/user-card.component.scss
+++ b/src/app/User/components/user-card/user-card.component.scss
@@ -1,8 +1,9 @@
 @use '@angular/material' as mat;
+@use 'sass:color' as color;
 
 mat-card {
   margin: 16px 0;
-  @include mat.card-overrides((elevated-container-color: var(--mat-sys-tertiary-container),
+  @include mat.card-overrides((elevated-container-color: light-dark(color.adjust(#90fc9e, $lightness: 12%), color.adjust(#90fc9e, $lightness: -65%)),
       elevated-container-elevation: var(--mat-sys-level0),
       elevated-container-shape: var(--mat-sys-shape-rectangle)));
 }
