--- a/src/app/User/components/contact-card/contact-card.component.scss
+++ b/src/app/User/components/contact-card/contact-card.component.scss
@@ -3,7 +3,7 @@
 
 mat-card {
   margin: 16px 0;
-  @include mat.card-overrides((elevated-container-color: color.adjust(#90fc9e, $lightness: 12%),
+  @include mat.card-overrides((elevated-container-color: light-dark(color.adjust(#90fc9e, $lightness: 12%), color.adjust(#90fc9e, $lightness: -65%)),
       elevated-container-elevation: var(--mat-sys-level0),
       elevated-container-shape: var(--mat-sys-shape-rectangle)));
 }
